# Neuralex-V2

./: .replit  HETZNER_DEPLOYMENT.md  INSTALLATION_GUIDE.md  README.md  README_DE.md  README_DETAILED_DE.md  deploy_hetzner.sh  final_system_validation.py  production_readiness_checklist.md  pyproject.toml  setup_ollama.sh  test_admin_functionality.py
app/: __init__.py  main.py  simple_main.py
app/admin/: __init__.py  api.py
app/db/: models.py  session.py
app/ingestion/: __init__.py  gcp_fetcher.py
app/integrations/: __init__.py  google_document_ai.py  google_vision_api.py
app/ml_client/: __init__.py  ollama_client.py  predict.py
app/schemas/: __init__.py  data_types.py  doc_types.py  event_types.py
app/utils/: mapping.py
app/worker/: __init__.py  background_worker.py
attached_assets/: Pasted--PROMPT-BEGIN-Du-bist-Senior-Full-Stack-Python-Engineer-Erstelle-mir-ein-startf-higes--1748599287576.txt
static/css/: admin-dashboard.css  modern-style.css  style.css
static/js/: admin-dashboard-fixed.js  admin-dashboard.js  document-processing.js  main.js  modern-app.js
templates/: admin_dashboard.html  dashboard.html  index.html  modern_dashboard.html  modern_index.html
tests/: __init__.py  test_endpoints.py
